ajout href test

--- a/index.html
+++ b/index.html
@@ -59,27 +59,32 @@
 
   </style>
 </head>
-<body> <div class="container">
-    <div class="card blue">
-      SORTIES<br />
-      PÉDAGOGIQUES<br />
-      EN JANVIER
-    </div><div class="card light">
-  Message de<br />
-  l'équipe éducative<br />
-  JP1 mat
-</div>
+<body> 
+  <div class="container">
+    <a href="https://github.com/leelianserrant/candidature-beneylu-main">
+      <div class="card blue">
+        SORTIES<br />
+        PÉDAGOGIQUES<br />
+        EN JANVIER
+      </div>
+    </a>
+    
+    <div class="card light">
+      Message de<br />
+      l'équipe éducative<br />
+      JP1 mat
+    </div>
 
-<div class="card light">
-  Comprendre<br />
-  l'histoire " Lulu et<br />
-  les bonbons "
-</div>
+    <div class="card light">
+      Comprendre<br />
+      l'histoire " Lulu et<br />
+      les bonbons "
+    </div>
 
-<div class="card orange">
-  Notre projet<br />
-  Gourmandise
-</div>
-
-  </div></body>
+    <div class="card orange">
+      Notre projet<br />
+      Gourmandise
+    </div>
+  </div>
+</body>
 </html>
