ajout lien vers api django

--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@ body {
         <p>API REST développée avec Symfony.</p>
       </a>
 
-      <div class="project-card disabled">
-        <h3>API Django / Angular</h3>
-        <p>Back-end Django connecté à un front Angular.</p>
-      </div>
+      <a class="project-card" href="https://github.com/leelianserrant/API-Django-Angular,.git" target="_blank"></a>
+        <div class="project-card disabled">
+          <h3>API Django / Angular</h3>
+          <p>Back-end Django connecté à un front Angular.</p>
+        </div>
+      </a>
     </div>
   </section>
 
