--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body {
         <p>API REST développée avec Symfony.</p>
       </a>
 
-      <a class="project-card" href="https://github.com/leelianserrant/API-Django-Angular,.git" target="_blank"></a>
+      <a class="project-card" href="https://github.com/leelianserrant/API-Django-Angular.git" target="_blank"></a>
         <h3>API Django / Angular</h3>
         <p>Back-end Django connecté à un front Angular.</p>
       </a>
